re PR c++/17816 (duplicate definition of pure virtual function not diagnosed)

gcc/cp/ChangeLog:
PR c++/17816
* decl.c (redeclaration_error_message): Report redefinition of
pure virtual function.
gcc/testsuite/ChangeLog:
PR c++/17816
* g++.dg/other/redecl2.C: New.

From-SVN: r95008